# iohk-monitoring-framework

./: .gitignore  .stack-to-nix.cache  CODEOWNERS  CONTRIBUTING.md  PLAN.md  README.md  a  bors.toml  cabal.project  default.nix  flake.nix  hie.yaml  iohk-monitoring.cabal  iohk-monitoring.nix  lib.nix  release.nix  shell.nix  stack.yaml
.buildkite/: check-stylish.sh  pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: epic-template.md
.github/workflows/: haskell.yml
basic-tracer/: basic-tracer.cabal
basic-tracer/src/Cardano/BM/: Tracer.lhs
basic-tracer/src/Cardano/BM/Tracer/: Class.lhs  Output.lhs  Transformers.lhs
basic-tracer/test/: Test.lhs
basic-tracer/test/Cardano/BM/Test/: Tracer.lhs
contra-tracer/: README.md  contra-tracer.cabal
contra-tracer/src/Control/: Tracer.lhs
contra-tracer/src/Control/Tracer/: Class.lhs  Observe.lhs  Output.lhs  Transformers.lhs
contra-tracer/test/: Test.lhs
doc/Cardano.BM/: 128405.diagram  134677  135189  135317.diagram  142101.diagram  Cardano.BM.prj
doc/pres-20181204/: master.md
docs/: .gitignore  Benchmarking_one-pager.odp  Code.lhs  Logging_one-pager.odp  Makefile  Monitoring_Spec.txt  README.md  aggregation.tex  configuration.tex  contravariant.tex  index.html  local.fmt  monitoring.tex  mu-benchmarks.tex  output-selection.tex  references.fmt  requirements.tex  shell.nix  test-coverage.tex  traces.tex
docs/Cardano.BM/: 128021  128021.diagram  128149.diagram  128277.diagram  134549  134805  134933  135061  135189  135189.diagram  135445.diagram  135573.diagram  141717  148245  148373  148629.diagram  154901  155157.diagram  161685.diagram  168213.diagram  174741.diagram  21.session  Cardano.BM.prj  generation_settings
docs/one-page/: shell.nix
docs/one-pager/: Makefile
docs/planning/: Makefile  milestones-logging.dot  milestones-shell.dot
docs/pres-20181204/: README.md  master.rst  style.css
docs/prochpc/: ProcHPC.hs  README.md  cabal.project  prochpc.cabal
examples/: CHANGELOG.md  lobemo-examples.cabal
examples/acceptor/: Main.hs  acceptor.yaml
examples/complex/: Main.hs  Main.lhs
examples/counters/: Main.lhs
examples/performance/: Main.lhs  README.md
examples/simple/: Main.hs  Main.lhs
examples/stats/: Main.lhs
examples/structured/: Main.hs
iog-contra-tracer/: README.md  iog-contra-tracer.cabal
iohk-monitoring/: README.md  iohk-monitoring.cabal
iohk-monitoring/examples/complex/: Main.lhs
iohk-monitoring/examples/performance/: Main.lhs  README.md
iohk-monitoring/examples/simple/: Main.lhs
iohk-monitoring/src/Cardano/BM/: Configuration.lhs  Counters.lhs  ElidingTracer.lhs  IOManager.hs  Plugin.lhs  Rotator.lhs  Setup.lhs  Snocket.hs  Stats.hs  Trace.lhs  Tracer.lhs  Tracing.lhs
iohk-monitoring/src/Cardano/BM/Backend/: Aggregation.lhs  EKGView.lhs  Editor.lhs  ExternalAbstraction.lhs  Graylog.lhs  Log.lhs  LogBuffer.lhs  Monitoring.lhs  ProcessQueue.lhs  Prometheus.lhs  Switchboard.lhs  TraceAcceptor.lhs  TraceForwarder.lhs
iohk-monitoring/src/Cardano/BM/Configuration/: Editor.lhs  Model.lhs  Static.lhs
iohk-monitoring/src/Cardano/BM/Counters/: Common.lhs  Darwin.hsc  Dummy.lhs  Linux.lhs  Windows.hsc  os-support-darwin.c  os-support-darwin.h  os-support-win.c  os-support-win.h
iohk-monitoring/src/Cardano/BM/Data/: Aggregated.lhs  AggregatedKind.lhs  Backend.lhs  BackendKind.lhs  Configuration.lhs  Counter.lhs  LogItem.lhs  MessageCounter.lhs  MonitoringEval.lhs  Observable.lhs  Output.lhs  Severity.lhs  SubTrace.lhs  Trace.lhs  Tracer.lhs  Transformers.lhs
iohk-monitoring/src/Cardano/BM/Internal/: ElidingTracer.lhs  STM.hs
iohk-monitoring/src/Cardano/BM/Observer/: Monadic.lhs  STM.lhs
iohk-monitoring/src/Cardano/BM/Output/: Aggregation.lhs  EKGView.lhs  Editor.lhs  Graylog.lhs  Log.lhs  LogBuffer.lhs  LogBuffering.lhs  Monitoring.lhs  Prometheus.lhs  Switchboard.lhs
iohk-monitoring/src/Cardano/BM/Stats/: Resources.hs  Types.hs
iohk-monitoring/src/Control/Tracer/: Observe.lhs
iohk-monitoring/src/Control/Tracer/Transformers/: Synopsizer.lhs
iohk-monitoring/static/: configuration-editor.html
iohk-monitoring/test/: Test.hs  Test.lhs  config.yaml
iohk-monitoring/test/Cardano/BM/: Arbitrary.hs
iohk-monitoring/test/Cardano/BM/Arbitrary/: Aggregated.lhs
iohk-monitoring/test/Cardano/BM/Test/: Aggregated.lhs  Configuration.lhs  LogItem.lhs  Mock.lhs  Monitoring.lhs  Rotator.lhs  Routing.lhs  Structured.lhs  Trace.lhs  Tracer.lhs
lobemo-examples/simple/: Main.lhs
nix/: .stack-pkgs.nix  default.nix  haskell.nix  iohk-nix-src.json  pkgs.nix  regenerate.sh  sources.  sources.json  stack-shell.nix
nix/.stack.nix/: basic-tracer.nix  contra-tracer.nix  default.nix  ekg-prometheus-adapter.nix  iohk-monitoring.nix  katip-libsystemd-journal.nix  libsystemd-journal.nix  liquid-fixpoint.nix  liquidhaskell.nix  lobemo-backend-aggregation.nix  lobemo-backend-editor.nix  lobemo-backend-ekg.nix  lobemo-backend-graylog.nix  lobemo-backend-monitoring.nix  lobemo-backend-prometheus.nix  lobemo-backend-trace-acceptor.nix  lobemo-backend-trace-forwarder.nix  lobemo-examples.nix  lobemo-scribe-systemd.nix  (+1 more)
plugins/backend-editor/: README.md  lobemo-backend-editor.cabal
plugins/backend-editor/src/Cardano/BM/Backend/: Editor.lhs
plugins/backend-kafka/: NOTICE  README.md  lobemo-backend-kafka.cabal
plugins/backend-kafka/src/Cardano/BM/Backend/: Kafka.lhs
plugins/backend-prometheus/: README.md  lobemo-backend-prometheus.cabal
plugins/scribe-systemd/: README.md  lobemo-scribe-systemd.cabal
plugins/scribe-systemd/src/Cardano/BM/Scribe/: Systemd.lhs
src/: Code.lhs  literate.sh  local.fmt  references.fmt
static/: configuration-editor.html
test/: Test.lhs  config.yaml  literate.sh  references.fmt
trace-config/: conf.yaml
tracer-transformers/: LICENSE  tracer-transformers.cabal
tracer-transformers/example1/: Main.hs
tracer-transformers/example2/: Main.hs
tracer-transformers/src/Control/Tracer/: Transformers.hs
tracer-transformers/src/Control/Tracer/Transformers/: ObserveOutcome.lhs  Synopsizer.lhs  WithThreadAndTime.lhs
(+100 files in other folders)
