name:                iohk-monitoring
version:             0.1.1.0
synopsis:            logging, benchmarking and monitoring framework
-- description:
license:             MIT
license-file:        LICENSE
author:              Alexander Diemand, Andreas Triantafyllos
maintainer:
copyright:           2018 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Paths_iohk_monitoring

                       Cardano.BM.BaseTrace

                       Cardano.BM.Configuration
                       Cardano.BM.Configuration.Model
                       Cardano.BM.Configuration.Static

                       Cardano.BM.Counters
                       Cardano.BM.Counters.Common

                       Cardano.BM.Data.Aggregated
                       Cardano.BM.Data.AggregatedKind
                       Cardano.BM.Data.Backend
                       Cardano.BM.Data.BackendKind
                       Cardano.BM.Data.Configuration
                       Cardano.BM.Data.Counter
                       Cardano.BM.Data.LogItem
                       Cardano.BM.Data.Observable
                       Cardano.BM.Data.Output
                       Cardano.BM.Data.Rotation
                       Cardano.BM.Data.Severity
                       Cardano.BM.Data.SubTrace
                       Cardano.BM.Data.Trace

                       Cardano.BM.Observer.Monadic
                       Cardano.BM.Observer.STM

                       Cardano.BM.Output.Aggregation
                       Cardano.BM.Output.EKGView
                       Cardano.BM.Output.Log
                       Cardano.BM.Output.Switchboard

                       Cardano.BM.Rotator
                       Cardano.BM.Setup
                       Cardano.BM.Trace
  if os(Linux)
     exposed-modules:  Cardano.BM.Counters.Linux
  else
     exposed-modules:  Cardano.BM.Counters.Dummy

  other-modules:
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.11,
                       aeson,
                       array,
                       async,
                       auto-update,
                       bytestring,
                       clock,
                       containers,
                       contravariant,
                       directory,
                       ekg,
                       ekg-core,
                       filepath,
                       katip,
                       lens,
                       mtl,
                       safe-exceptions,
                       scientific,
                       stm,
                       template-haskell,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       yaml
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  ghc-options:         -Wall -O2
                       -fno-ignore-asserts

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Cardano.BM.Test.Trace
                       Cardano.BM.Test.Aggregated
                       Cardano.BM.Test.STM
                       Cardano.BM.Test.Configuration
                       Cardano.BM.Test.Routing
                       Cardano.BM.Arbitrary.Aggregated
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       iohk-monitoring,

                       aeson,
                       array,
                       async,
                       bytestring,
                       clock,
                       containers,
                       directory,
                       mtl,
                       process,
                       QuickCheck,
                       random,
                       semigroups,
                       stm,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       void,
                       yaml
  ghc-options:         -Wall

executable example-simple
  hs-source-dirs:      examples/simple
  main-is:             Main.lhs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       async,
                       bytestring,
                       mtl
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable example-complex
  hs-source-dirs:      examples/complex
  main-is:             Main.lhs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       async,
                       bytestring,
                       mtl,
                       random,
                       text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux)
     build-depends:    download
