name:                basic-tracer
version:             0.1.0.0
synopsis:            tracing facility
-- description:
license:             MIT
license-file:        LICENSE
author:              Neil Davies, Alexander Diemand, Andreas Triantafyllos
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.BM.Tracer
                       Cardano.BM.Tracer.Class
                       Cardano.BM.Tracer.Output
                       Cardano.BM.Tracer.Transformers

  other-modules:

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.11,
                       contravariant,
                       text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  ghc-options:         -Wall -O2
                       -fno-ignore-asserts

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Cardano.BM.Test.Tracer

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       basic-tracer,

                       QuickCheck,
                       random,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       text
  ghc-options:         -Wall

