name:                contra-tracer
version:             0.1.0.0
synopsis:            A simple interface for logging, tracing or monitoring.
-- description:
license:             MIT
license-file:        LICENSE
author:              Neil Davies, Alexander Diemand, Andreas Triantafyllos
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Logging
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Tracer

  other-modules:
                       Control.Tracer.Class
                       Control.Tracer.Output
                       Control.Tracer.Transformers

  default-language:    Haskell2010
  build-depends:       base
  if impl(ghc < 8.5)
    build-depends:     contravariant
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Cardano.BM.Test.Tracer

  default-language:    Haskell2010
  build-depends:       base,
                       contra-tracer,

                       QuickCheck,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck
  ghc-options:         -Wall

