cabal-version:       2.0
name:                lobemo-examples
version:             0.1.0.0
synopsis:            examples of logging, benchmarking, and monitoring
-- description:
homepage:            https://github.com/input-output-hk/iohk-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable example-simple
  main-is:             Main.lhs
  -- other-modules:
  default-extensions:  OverloadedStrings
  other-extensions:    CPP, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      simple
  default-language:    Haskell2010
  build-depends:       base,
                       aeson,
                       iohk-monitoring,
                       lobemo-backend-editor,
                       async,
                       bytestring,
                       mtl
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable example-complex
  hs-source-dirs:      complex
  main-is:             Main.lhs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       lobemo-backend-aggregation,
                       lobemo-backend-editor,
                       lobemo-backend-ekg,
                       lobemo-backend-monitoring,
                       async,
                       bytestring,
                       mtl,
                       random,
                       text,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux)
     build-depends:    download

executable example-performance
  hs-source-dirs:      performance
  main-is:             Main.lhs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -Wall -O2 -with-rtsopts=-T
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       async,
                       criterion,
                       text,
                       unordered-containers

