name:                iohk-monitoring
version:             0.1.9.0
synopsis:            logging, benchmarking and monitoring framework
-- description:
license:             MIT
license-file:        LICENSE
author:              Alexander Diemand, Andreas Triantafyllos
maintainer:
copyright:           2018 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag disable-aggregation
  description:         Turn off complete aggregation subsystem.
  default:             False
  manual:              True

flag disable-ekg
  description:         Turn off EKG.
  default:             False
  manual:              True

flag disable-graylog
  description:         Turn off Graylog.
  default:             False
  manual:              True

flag disable-prometheus
  description:         Turn off Prometheus.
  default:             False
  manual:              True

flag disable-gui
  description:         Turn off configuration editor GUI.
  default:             False
  manual:              True

flag disable-monitoring
  description:         Turn off monitoring subsystem.
  default:             False
  manual:              True

flag disable-observables
  description:         Turn off observables, observers.
  default:             False
  manual:              True

flag disable-syslog
  description:         Turn off syslog and systemd facilities.
  default:             False
  manual:              True

flag disable-examples
  description:         Turn off building of examples.
  default:             False
  manual:              True

library
  hs-source-dirs:      src
  exposed-modules:     Paths_iohk_monitoring

                       Cardano.BM.Configuration
                       Cardano.BM.Configuration.Model
                       Cardano.BM.Configuration.Static

                       Cardano.BM.Counters
                       Cardano.BM.Counters.Common

                       Cardano.BM.Data.Aggregated
                       Cardano.BM.Data.AggregatedKind
                       Cardano.BM.Data.Backend
                       Cardano.BM.Data.BackendKind
                       Cardano.BM.Data.Configuration
                       Cardano.BM.Data.Counter
                       Cardano.BM.Data.LogItem
                       Cardano.BM.Data.MessageCounter
                       Cardano.BM.Data.MonitoringEval
                       Cardano.BM.Data.Observable
                       Cardano.BM.Data.Output
                       Cardano.BM.Data.Rotation
                       Cardano.BM.Data.Severity
                       Cardano.BM.Data.SubTrace
                       Cardano.BM.Data.Trace
                       Cardano.BM.Data.Tracer
                       Cardano.BM.Tracing

                       Cardano.BM.Backend.ExternalAbstraction
                       Cardano.BM.Backend.Log
                       Cardano.BM.Backend.LogBuffer
                       Cardano.BM.Backend.Switchboard
                       Cardano.BM.Backend.TraceAcceptor
                       Cardano.BM.Backend.TraceForwarder
                       Cardano.BM.Rotator
                       Cardano.BM.Setup
                       Cardano.BM.Trace
                       Cardano.BM.Tracer

  if !flag(disable-aggregation)
    exposed-modules:   Cardano.BM.Backend.Aggregation

  if !flag(disable-ekg)
    exposed-modules:   Cardano.BM.Backend.EKGView

  if !flag(disable-graylog)
    exposed-modules:   Cardano.BM.Backend.Graylog

  if !flag(disable-ekg) && !flag(disable-prometheus)
    exposed-modules:   Cardano.BM.Backend.Prometheus

  if !flag(disable-gui)
    exposed-modules:   Cardano.BM.Backend.Editor

  if !flag(disable-observables)
    exposed-modules:   Cardano.BM.Observer.Monadic
                       Cardano.BM.Observer.STM

  if !flag(disable-monitoring)
    exposed-modules:   Cardano.BM.Backend.Monitoring

  if os(linux)
    exposed-modules:   Cardano.BM.Counters.Linux
  else
    exposed-modules:   Cardano.BM.Counters.Dummy

  other-modules:

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.11,
                       contra-tracer,
                       aeson,
                       array,
                       async,
                       async-timer,
                       attoparsec,
                       auto-update,
                       bytestring,
                       clock,
                       containers,
                       contravariant,
                       directory,
                       filepath,
                       katip < 0.8,
                       lens,
                       mtl,
                       safe,
                       safe-exceptions,
                       scientific,
                       stm,
                       template-haskell,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       yaml, libyaml
  if !flag(disable-ekg)
     build-depends:    ekg,
                       ekg-core
  if !flag(disable-ekg) && !flag(disable-prometheus)
     build-depends:    ekg-prometheus-adapter,
                       prometheus,
                       warp
  if !flag(disable-graylog)
     build-depends:    network
  if !flag(disable-gui)
     build-depends:    threepenny-gui
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux) && !flag(disable-syslog)
     cpp-options:      -DENABLE_SYSLOG
     build-depends:    hsyslog,
                       libsystemd-journal

  if !flag(disable-aggregation)
    cpp-options:       -DENABLE_AGGREGATION

  if !flag(disable-ekg)
    cpp-options:       -DENABLE_EKG

  if !flag(disable-graylog)
    cpp-options:       -DENABLE_GRAYLOG

  if !flag(disable-ekg) && !flag(disable-prometheus)
    cpp-options:       -DENABLE_PROMETHEUS

  if !flag(disable-gui)
    cpp-options:       -DENABLE_GUI

  if !flag(disable-monitoring)
    cpp-options:       -DENABLE_MONITORING

  if !flag(disable-observables)
    cpp-options:       -DENABLE_OBSERVABLES

  ghc-options:         -Wall -O2
                       -fno-ignore-asserts

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Cardano.BM.Test.Trace
                       Cardano.BM.Test.STM
                       Cardano.BM.Test.Configuration
                       Cardano.BM.Test.Rotator
                       Cardano.BM.Test.Routing
                       Cardano.BM.Test.Structured
                       Cardano.BM.Test.Tracer

  if !flag(disable-aggregation)
    other-modules:     Cardano.BM.Test.Aggregated
                       Cardano.BM.Arbitrary.Aggregated

  if !flag(disable-monitoring)
    other-modules:     Cardano.BM.Test.Monitoring

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       contra-tracer,
                       iohk-monitoring,

                       aeson,
                       array,
                       async,
                       bytestring,
                       clock,
                       containers,
                       directory,
                       filepath,
                       mtl,
                       process,
                       QuickCheck,
                       random,
                       semigroups,
                       split,
                       stm,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       temporary,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       void,
                       yaml, libyaml
  ghc-options:         -Wall

  if !flag(disable-aggregation)
    cpp-options:       -DENABLE_AGGREGATION

  if !flag(disable-ekg)
    cpp-options:       -DENABLE_EKG

  if !flag(disable-graylog)
    cpp-options:       -DENABLE_GRAYLOG

  if !flag(disable-ekg) && !flag(disable-prometheus)
    cpp-options:       -DENABLE_PROMETHEUS

  if !flag(disable-gui)
    cpp-options:       -DENABLE_GUI

  if !flag(disable-monitoring)
    cpp-options:       -DENABLE_MONITORING

  if !flag(disable-observables)
    cpp-options:       -DENABLE_OBSERVABLES

executable example-simple
  hs-source-dirs:      examples/simple
  main-is:             Main.lhs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       async,
                       bytestring,
                       mtl
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix
  if flag(disable-examples)
    buildable:         False

executable example-complex
  hs-source-dirs:      examples/complex
  main-is:             Main.lhs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -Wall -O2 "-with-rtsopts=-T"
  other-modules:
  build-depends:       base,
                       iohk-monitoring,
                       async,
                       bytestring,
                       mtl,
                       random,
                       text,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux)
     build-depends:    download

  if !flag(disable-aggregation)
    cpp-options:       -DENABLE_AGGREGATION

  if !flag(disable-ekg)
    cpp-options:       -DENABLE_EKG

  if !flag(disable-graylog)
    cpp-options:       -DENABLE_GRAYLOG

  if !flag(disable-ekg) && !flag(disable-prometheus)
    cpp-options:       -DENABLE_PROMETHEUS

  if !flag(disable-gui)
    cpp-options:       -DENABLE_GUI

  if !flag(disable-monitoring)
    cpp-options:       -DENABLE_MONITORING

  if !flag(disable-observables)
    cpp-options:       -DENABLE_OBSERVABLES

  if flag(disable-examples)
    buildable:         False
