name:                iohk-monitoring
version:             0.1.10.1
synopsis:            logging, benchmarking and monitoring framework
-- description:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand, Andreas Triantafyllos
maintainer:
copyright:           2018 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag disable-aggregation
  description:         Turn off complete aggregation subsystem.
  default:             False
  manual:              True

flag disable-ekg
  description:         Turn off EKG.
  default:             False
  manual:              True

flag disable-graylog
  description:         Turn off Graylog.
  default:             False
  manual:              True

flag disable-gui
  description:         Turn off configuration editor GUI.
  default:             False
  manual:              True

flag disable-monitoring
  description:         Turn off monitoring subsystem.
  default:             False
  manual:              True

flag disable-observables
  description:         Turn off observables, observers.
  default:             False
  manual:              True

flag disable-systemd
  description:         Turn off systemd journal scribe.
  default:             False
  manual:              True

flag disable-examples
  description:         Turn off building of examples.
  default:             False
  manual:              True

flag performance-test-queue
  description:         Set the huge size for backends' queues.
  default:             False
  manual:              True

library
  hs-source-dirs:      src
  exposed-modules:     Paths_iohk_monitoring

                       Cardano.BM.Configuration
                       Cardano.BM.Configuration.Model
                       Cardano.BM.Configuration.Static

                       Cardano.BM.Counters
                       Cardano.BM.Counters.Common

                       Cardano.BM.Data.Aggregated
                       Cardano.BM.Data.AggregatedKind
                       Cardano.BM.Data.Backend
                       Cardano.BM.Data.BackendKind
                       Cardano.BM.Data.Configuration
                       Cardano.BM.Data.Counter
                       Cardano.BM.Data.LogItem
                       Cardano.BM.Data.MessageCounter
                       Cardano.BM.Data.MonitoringEval
                       Cardano.BM.Data.Observable
                       Cardano.BM.Data.Output
                       Cardano.BM.Data.Rotation
                       Cardano.BM.Data.Severity
                       Cardano.BM.Data.SubTrace
                       Cardano.BM.Data.Trace
                       Cardano.BM.Data.Tracer
                       Cardano.BM.Tracing

                       Cardano.BM.Backend.ExternalAbstraction
                       Cardano.BM.Backend.Log
                       Cardano.BM.Backend.LogBuffer
                       Cardano.BM.Backend.ProcessQueue
                       Cardano.BM.Backend.Switchboard
                       Cardano.BM.Backend.TraceAcceptor
                       Cardano.BM.Backend.TraceForwarder
                       Cardano.BM.Plugin
                       Cardano.BM.Rotator
                       Cardano.BM.Setup
                       Cardano.BM.Trace
                       Cardano.BM.Tracer

  if !flag(disable-observables)
    exposed-modules:   Cardano.BM.Observer.Monadic
                       Cardano.BM.Observer.STM

  if os(linux)
    exposed-modules:   Cardano.BM.Counters.Linux
  else
    exposed-modules:   Cardano.BM.Counters.Dummy

  other-modules:

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.11,
                       contra-tracer,
                       aeson >= 1.4.4,
                       array,
                       async,
                       async-timer,
                       attoparsec,
                       auto-update,
                       base64-bytestring,
                       bytestring,
                       clock,
                       containers,
                       contravariant,
                       directory,
                       filepath,
                       katip < 0.8,
                       lens,
                       mtl,
                       safe,
                       safe-exceptions,
                       scientific,
                       stm,
                       template-haskell,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       yaml, libyaml

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux) && !flag(disable-systemd)
     cpp-options:      -DENABLE_SYSTEMD
     build-depends:    hsyslog,
                       libsystemd-journal

  if !flag(disable-aggregation)
    cpp-options:       -DENABLE_AGGREGATION

  if !flag(disable-gui)
    cpp-options:       -DENABLE_GUI

  if !flag(disable-monitoring)
    cpp-options:       -DENABLE_MONITORING

  if !flag(disable-observables)
    cpp-options:       -DENABLE_OBSERVABLES

  if flag(performance-test-queue)
    cpp-options:       -DPERFORMANCE_TEST_QUEUE

  ghc-options:         -Wall -Werror -O2
                       -fno-ignore-asserts

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Cardano.BM.Test.Trace
                       Cardano.BM.Test.STM
                       Cardano.BM.Test.Configuration
                       Cardano.BM.Test.LogItem
                       Cardano.BM.Test.Mock
                       Cardano.BM.Test.Rotator
                       Cardano.BM.Test.Routing
                       Cardano.BM.Test.Structured
                       Cardano.BM.Test.Tracer

  if !flag(disable-aggregation)
    other-modules:     Cardano.BM.Test.Aggregated
                       Cardano.BM.Arbitrary.Aggregated

  if !flag(disable-monitoring)
    other-modules:     Cardano.BM.Test.Monitoring

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       contra-tracer,
                       iohk-monitoring,

                       aeson >= 1.4.4,
                       array,
                       async,
                       bytestring,
                       clock,
                       containers,
                       directory,
                       filepath,
                       mtl,
                       process,
                       QuickCheck,
                       random,
                       semigroups,
                       split,
                       stm,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       temporary,
                       text,
                       time,
                       time-units,
                       transformers,
                       unordered-containers,
                       vector,
                       void,
                       yaml, libyaml
  ghc-options:         -Wall -Werror

  if !flag(disable-aggregation)
    cpp-options:       -DENABLE_AGGREGATION

  if !flag(disable-ekg)
    cpp-options:       -DENABLE_EKG

  if !flag(disable-gui)
    cpp-options:       -DENABLE_GUI

  if !flag(disable-monitoring)
    cpp-options:       -DENABLE_MONITORING

  if !flag(disable-observables)
    cpp-options:       -DENABLE_OBSERVABLES

